Nú virka comboBox fyrir area og type

--- a/DayTourSearchEngine/src/view/SearchFrame.form
+++ b/DayTourSearchEngine/src/view/SearchFrame.form
@@ -114,8 +114,8 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="accessibleButton" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="familyFriendlyButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="areaCombo" min="-2" pref="122" max="-2" attributes="0"/>
-                                      <Component id="typeCombo" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
+                                      <Component id="typeCombo" min="-2" pref="122" max="-2" attributes="0"/>
+                                      <Component id="areaCombo" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -191,11 +191,11 @@
                           <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                           <Component id="areaLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="typeCombo" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="areaCombo" min="-2" pref="34" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                           <Component id="typeLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="areaCombo" min="-2" pref="36" max="-2" attributes="0"/>
+                          <Component id="typeCombo" min="-2" pref="36" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -245,7 +245,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nameSearchBoxActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JComboBox" name="typeCombo">
+        <Component class="javax.swing.JComboBox" name="areaCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="7">
@@ -263,7 +263,7 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="areaCombo">
+        <Component class="javax.swing.JComboBox" name="typeCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="6">
@@ -275,7 +275,11 @@
                 <StringItem index="5" value="Food Trips"/>
               </StringArray>
             </Property>
+            <Property name="actionCommand" type="java.lang.String" value=""/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="typeComboActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
